syntax = "proto3";
package uniswap_oracle.v1;

import "uniswap_oracle/v1/oracle.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "x/uniswap_oracle/types";


// GenesisState - all oracle state that must be provided at genesis
// GenesisState - all oracle state that must be provided at genesis
message GenesisState {
    Params                        params             = 1 [
        (gogoproto.nullable) = false
    ];
    repeated OracleDelegation     feeder_delegations = 2 [
        (gogoproto.nullable) = false
    ];
    repeated ValidatorMissCounter miss_counters      = 4 [
        (gogoproto.nullable) = false
    ];
    repeated UniswapPrevote       uniswap_prevote    = 5 [
        (gogoproto.nullable)     = false,
        (gogoproto.castrepeated) = "[]UniswapPrevote"
    ];
    repeated UniswapVote          uniswap_vote       = 6 [
        (gogoproto.nullable)     = false,
        (gogoproto.castrepeated) = "[]UniswapVote"
    ];
}

// OracleDelegation represents a delegator-delegate pair for an oracle delegation
message OracleDelegation {
    // validator address which is delegating it's authority to vote
    string validator_address = 1 [(gogoproto.moretags) = "yaml:\"validator_address\""];
    // account delegate address
    string delegate_address  = 2 [(gogoproto.moretags) = "yaml:\"delegate_address\""];
}

// ValidatorMissCounter represents a per validator miss counter
message ValidatorMissCounter {
    // validator operator address
    string val_address = 1 [(gogoproto.moretags) = "yaml:\"val_address\""];
    // missed oracle counter
    int64  missed_counter = 2 [(gogoproto.moretags) = "yaml:\"missed_counter\""];
}